# airbnb-backend-clone

./: build.sh  pyproject.toml  render.yaml
account/: models.py
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0002_remove_booking_name.py  0003_alter_booking_experiences_alter_booking_rooms_and_more.py  0003_initial.py  0004_initial.py  0004_rename_experiences_booking_experience_and_more.py  0005_alter_booking_updated_at.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_updated_at.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_initial.py  0002_rename_room_message_chattingroom.py  0003_alter_chattingroom_users_alter_message_chattingroom_and_more.py  0004_alter_chattingroom_updated_at_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_alter_experience_category_alter_experience_host_and_more.py  0004_rename_perks_perk.py  0005_alter_experience_end_alter_experience_start.py  0006_alter_experience_end_alter_experience_start.py  (+1 more)
medias/: models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  serializers.py  tests.py  views.py
users/: admin.py  models.py  serializer.py  serializers.py  views.py
wishlists/: models.py  serializers.py  views.py
(+22 files in other folders)
