[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["j3s30p"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.6.0"
django-environ = "^0.9.0"
django-rest-knox = "^4.2.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.146.0"}
strawberry-graphql-django = "^0.8.2"
django-cors-headers = "^3.13.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
